--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -26,7 +26,7 @@
             minor glitches as we straighten things up &ndash; if you hit a problem or want to 
             let us know how you feel about the new console,
             #{link_to "post in the Express forum", post_to_forum_url} or
-            #{link_to "fill a bug", 'https://bugzilla.redhat.com/enter_bug.cgi?product=OpenShift%20Express'}.
+            #{link_to "file a bug", 'https://bugzilla.redhat.com/enter_bug.cgi?product=OpenShift%20Express'}.
             %br
             #{link_to "« Back to the Control Panel", control_panel_path}
 
