--- a/site/app/subsites/status/views/index.haml
+++ b/site/app/subsites/status/views/index.haml
@@ -1,5 +1,5 @@
 %h1(class="#{header[:class]}") 
-  %script(src="/app/status/status.js")
+  %script(src="#{@base}/status/status.js")
 
 %h2 Open Issues
 - @open.each do |issue|
