--- a/cartridges/jbossas-7/template/src/main/webapp/index.html
+++ b/cartridges/jbossas-7/template/src/main/webapp/index.html
@@ -290,9 +290,9 @@ jrcq3gYOyVkvcjjwUWA53iD6KaGAhISEvC/xg+QaYFQiHivqXVAh7w7hLxKGhIS8XzkHeCoUj/cv
 <h1>Sample Applications</h1>
 <p>To get started you can either modify the default war or try one of these samples:
   <ul>
-    <li><a href="https://github.com/openshift/seambooking-example">https://github.com/openshift/seambooking-example</a> a SEAM booking example</li>
+    <li><a href="https://github.com/openshift/kitchensink-example">https://github.com/openshift/kitchensink-example</a> this quickstart shows off all the new features of Java EE 6, and makes a great starting point for your project.</li>
+    <li><a href="https://github.com/openshift/kitchensink-html5-mobile-example">https://github.com/openshift/kitchensink-html5-mobile-example</a> based on kitchensink (above), but with an HTML5 client that displays great on a PC or mobile device </li>
     <li><a href="https://github.com/openshift/tweetstream-example">https://github.com/openshift/tweetstream-example</a> a TweetStream example</li>
-    <li><a href="https://github.com/openshift/jbossas-quickstart">https://github.com/openshift/jbossas-quickstart</a> the JBossAS quickstart</li>
   </ul>
   
   <h4>Example usage:</h4>
