--- a/site/app/stylesheets/bootstrap.scss
+++ b/site/app/stylesheets/bootstrap.scss
@@ -26,6 +26,7 @@
 // Grid system and page structure
 @import "bootstrap/scaffolding";
 @import "bootstrap/grid";
+@import "grid";
 @import "bootstrap/layouts";
 
 // Base CSS
