--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -44,18 +44,23 @@ $ribbonColor:     #eb0011 !default;
 $ribbonTextColor: white !default;
 $ribbonFoldColor: #91010b !default;
 
-/* move into core when th ebranding converges */
+/* move into core when the branding converges */
 a { color: $ribbonFoldColor; }
 a:hover, a:active { color: $ribbonColor; }
 
 /* Hitch a div out of its parent */
-.lift { margin-top: -90px; }
-.lift-less { margin-top: -80px; }
-
-/* Preliminary gutter adjustment on spans */
-.gutter { margin-left: $gridGutterWidth; } /*FIXME needs responsive treatment */
-.gutter-fill { margin-left: 0; padding-left: $gridGutterWidth; }
-.gutter-fill-right { margin-right: -$gridGutterWidth; padding-right: $gridGutterWidth; }
+.lift { 
+  margin-top: -90px; 
+}
+.lift-less { 
+  margin-top: -80px; 
+}
+@media (max-width: 767px) {
+  .lift, 
+  .lift-less { 
+    margin-top: 0; 
+  }
+}
 
 /* A link that is a block, kind of like a thumbnail */
 @mixin tile($activeColor, $hoverColor, $backgroundActiveColor, $backgroundHoverColor) {
@@ -73,6 +78,8 @@ a:hover, a:active { color: $ribbonColor; }
     background-color: $backgroundActiveColor;
   }
 }
+
+body.signup { background-color: $topNavigationColor; }
 
 #top {background-color: $topBarColor; color: white;}
 #nav {background-color: $topNavigationColor; color: white; }
@@ -380,73 +387,20 @@ a:hover, a:active { color: $ribbonColor; }
 
 /* FIXME: better scoped or defined? */
 .column-content h1 { margin-top: 25px; margin-bottom: 25px; }
-
 /* The body content of a site page */
 .row-content {
   margin-bottom: 20px;
-
-  > .column-nav {
-    margin-left: 0;
-    padding-right: $gridGutterWidth;
-  }
-  > .column-content {
-    margin-left: 0px;
-    padding-bottom: 30px;
-  }
 }
-@mixin row_content_gutters($width: $gridGutterWidth) {
-  .row-content {
-    > .column-nav {
-      padding-right: $width;
-    }
-    > .column-content {
-      margin-right: -$width;
-
-      padding-left: $width;
-      padding-right: $width;
-    }
-  }
-}
-@include row_content_gutters();
-@if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
-  @include row_content_gutters($gridGutterWidthTablet);
-} }
-@if $gridGutterWidthLarge != $gridGutterWidth { @media (min-width: 1200px) {
-  @include row_content_gutters($gridGutterWidthLarge);
-} }
 
 @media (max-width: 767px) {
   #nav { padding-bottom: 30px; }
-  #content > .container { padding: 0; }
-  .lift {
-    .column-nav { margin-top: 0; }
-    .column-content { margin-top: 0; }
-  }
-  .row-content > .column-content { margin-right: 0; } 
 }
-
-@if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
-} }
-@if $gridGutterWidthLarge != $gridGutterWidth { @media (min-width: 1200px) {
-} }
 
 /* Left nav section */
 .column-nav {
   .nav-location { font-size: 19px; line-height: 46px; text-transform: uppercase; margin-top: 15px; }
+  > .nav-stacked { margin-left: $gridGutterWidth/2; }
 }
-@mixin column_nav_gutters($width: $gridGutterWidth) {
-  .column-nav {
-    > * { margin-left: $width; }
-    > .nav-stacked { margin-left: $width/2; }
-  }
-}
-@include column_nav_gutters();
-@if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
-  @include column_nav_gutters($gridGutterWidthTablet);
-} }
-@if $gridGutterWidthLarge != $gridGutterWidth { @media (min-width: 1200px) {
-  @include column_nav_gutters($gridGutterWidthLarge);
-} }
 
 /* Stacked navigations indent by 1 gutter each time */
 .nav-stacked .nav-stacked { margin-left: $gridGutterWidth; margin-bottom: 0; }
@@ -457,12 +411,12 @@ a:hover, a:active { color: $ribbonColor; }
   .nav-stacked .nav-stacked { margin-left: $gridGutterWidthLarge; }
 } }
 @media (max-width: 767px) {
-  #content .column-nav > ul > li { float: left; width: 32%; }
+  .column-nav > ul > li { float: left; width: 32%; }
   .nav-location { display: none; }
 }
 
 /* Body */
-#content h1.ribbon {
+h1.ribbon {
   > .ribbon-content { 
     background-color: $ribbonColor;
     color: $ribbonTextColor;
@@ -474,11 +428,12 @@ a:hover, a:active { color: $ribbonColor; }
   @include ribbon($ribbonFoldColor);
 }
 @if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
-  #content h1.ribbon { @include ribbon_gutters($gridGutterWidthTablet); }
+  h1.ribbon { @include ribbon_gutters($gridGutterWidthTablet); }
 } }
 @if $gridGutterWidthLarge != $gridGutterWidth { @media (min-width: 1200px) {
-  #content h1.ribbon { @include ribbon_gutters($gridGutterWidthLarge); }
+  h1.ribbon { @include ribbon_gutters($gridGutterWidthLarge); }
 } }
+
 
 /* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
 .views-field-rss { float: right; }
