--- a/site/app/views/styleguide/signup.html.haml
+++ b/site/app/views/styleguide/signup.html.haml
@@ -12,12 +12,13 @@
 #solo
   .container
     .row.row-content
-      .offset3.span6.column-content
-        %h1.ribbon
-          .ribbon-content Signup
-          .ribbon-left
+      .offset3.span6
+        .column-content.box-content
+          %h1.ribbon
+            .ribbon-content Signup
+            .ribbon-left
 
-        %p some content
+          %p some content
 
         %footer
           %section#copyright
