--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -36,17 +36,19 @@ $darkBackground:              #030303 !default;
 $textLightBackground:         white !default;
 $lightBackground:             white !default;
 
-$logoHeight:      70px !default;
-$logoWidth:       100px !default;
-$logoSeparation:  10px !default;
-
 $ribbonColor:     #eb0011 !default;
 $ribbonTextColor: white !default;
 $ribbonFoldColor: #91010b !default;
 
+@import "navbar";
+
 /* move into core when the branding converges */
 a { color: $ribbonFoldColor; }
 a:hover, a:active { color: $ribbonColor; }
+
+.align-right {
+  text-align: right;
+}
 
 /* Hitch a div out of its parent */
 .lift { 
@@ -66,11 +68,16 @@ a:hover, a:active { color: $ribbonColor; }
   }
 }
 
+.gutter { 
+  margin-left: $gridGutterWidth;
+}
+
+// Put content into a box with gutters compatible with the grid
 .box-content {
   padding: 20px $gridGutterWidth;
 }
 
-/* A link that is a block, kind of like a thumbnail */
+/* A link that is a block, similar to a thumbnail */
 @mixin tile($activeColor, $hoverColor, $backgroundActiveColor, $backgroundHoverColor) {
   display: block;
   text-decoration: none;
@@ -79,6 +86,7 @@ a:hover, a:active { color: $ribbonColor; }
     text-decoration: none; 
     color: $hoverColor; 
     background-color: $backgroundHoverColor;
+    background: -moz-repeating-linear-gradient(-180deg, $backgroundHoverColor 6px, transparentize($backgroundHoverColor, 1.0) 6px, transparentize($backgroundHoverColor, 1.0) 10px, $backgroundHoverColor 10px, $backgroundHoverColor) repeat scroll 0 0 transparent;
   }
   &:active {
     text-decoration: none; 
@@ -87,35 +95,56 @@ a:hover, a:active { color: $ribbonColor; }
   }
 }
 
-body.signup { background-color: $topNavigationColor; }
-
-#top {background-color: $topBarColor; color: white;}
-#nav {background-color: $topNavigationColor; color: white; }
-#content, #learn {
-  background: -moz-repeating-linear-gradient(-70deg, #e6e6e6, #e6e6e6 6px, #e4e4e4 9px, #e4e4e4 15px, #e6e6e6 18px) repeat scroll 0 0 transparent;
-  //background-image: -moz-linear-gradient(-70deg, #e6e6e6 25%, #444 75%);
-  //background-image: -moz-repeating-linear-gradient(-45deg, #e6e6e6 0%, #e4e4e4 50%, #e6e6e6);
-  //background-size: 120px 120px; 
+// Temporary
+body.signup { 
+  background-color: $topNavigationColor; 
 }
-#buzz {background-color: $topNavigationColor;}
-.column-content { background-color: $contentColumnColor; }
-#content > .container > div > .row { background-color: $underNavigationColumnColor; }
 
-.column-buzz { background-color: $darkBackground; color: $textDarkBackground; }
-.column-buzz a { color: $textDarkBackground; }
+// Concrete sections of pages
+.section-top {
+  background-color: $topBarColor; 
+  color: white;
+}
+.section-nav {
+  background-color: $topNavigationColor; 
+  color: white;
+  padding-bottom: 50px;
+}
+.section-nav.lift-counter {
+  padding-bottom: 90px;
+}
+@media (max-width: 767px) {
+  .section-nav.lift-counter {
+    padding-bottom: 30px;
+  }
+}
 
-.column-nav { background-color: $navigationColumnColor; }
-.column-nav,
-.column-nav label { color: #666; }
-.column-nav .headline,
-.column-nav h3,
-.column-nav h3 > a { color: white; text-transform: uppercase; }
-.column-nav a { color: #999; }
+.section-striped {
+  background: -moz-repeating-linear-gradient(-70deg, #e6e6e6, #e6e6e6 6px, #e4e4e4 9px, #e4e4e4 15px, #e6e6e6 18px) repeat scroll 0 0 transparent;
 
+  .link-tile {
+    color: #343434;
+    padding: 15px $gridGutterWidth;
+    @include tile(#343434, #343434, $ribbonFoldColor, #ccc);
 
-/* Nav section */
+    > :last-child { margin-bottom: 0; }
+  }
+}
+.section-striped.lift-counter {
+  padding-bottom: 130px;
+}
+@media (max-width: 767px) {
+  .section-striped.lift-counter {
+    padding-bottom: 30px;
+  }
+}
 
-#top > .container {
+.section-base {
+  background-color: $topNavigationColor;
+}
+
+// Top bar
+.section-top > .container {
   > div {
     padding: 8px 0;
     > a {
@@ -125,152 +154,52 @@ body.signup { background-color: $topNavigationColor; }
     }
     > a:hover {
       text-decoration: none;
-      color: $loginBackgroundColor;
-      background-color: $loginColor;
+      color: white;
     }
   }
-  > div.login {
+  > .login {
     padding: 5px 0;
-    /* may want to turn these into some sort of specific styled button */
-    > a {
-      color: $loginColor;
-      padding: 3px 10px;
-      display: inline-block;
-      background-color: $loginBackgroundColor;
-    }
-    > a.login-provider {
-      height: 18px;
-    }
-    > a:hover {
-      text-decoration: none;
-      color: $loginBackgroundColor;
-      background-color: $loginColor;
-    }
   }
 }
 
-.navbar {
-  padding-top: 30px;
-  height: 130px;
-  position: relative;
-
-  .brand {
-    text-align: center;
-    text-transform: uppercase;
-    position: relative;
-    top: $logoHeight + $logoSeparation;
-    /* reset styles */
-    float: none;
-    margin: 0;
-    padding: 0;
-  }
-  .nav {
-    font-size: 13px; 
-    text-transform: uppercase;
-    /* reset styles */
-    float: none;
-    margin: 0;
-
-    margin-bottom: 110px;
-
-    > li {
-      float: left;
-      width: 20%;
-      text-align: center;
-
-      > a {
-        color: white; 
-        font-size: 13px; 
-        text-transform: uppercase; 
-        font-weight: bold;
-        /* reset styles */
-        padding: 5px 0;
-      }
-    }
-
-    > li:nth-child(1) { text-align: left; }
-    > li:nth-last-child(1) { text-align: right; }
-
-    /* needs fixing */
-    > .active > a,
-    > .active > a:hover,
-    > li > a:hover {
-      /* reset styles */
-      background: transparent;
-      border: 0;
-      box-shadow: none;
-      text-decoration: underline;
-    }
-  }
-}
-
-/*FIXME After 3.1, move into element */
-@media (max-width: 767px) { .navbar {
-  height: 100px; 
-} }
-@media (max-width: 767px) { .navbar .brand {
-  position: static;
-  float: left;
-  text-align: center;
-  width: $logoWidth;
-  margin-top: $logoHeight + $logoSeparation;
-} }
-
-@media (max-width: 767px) { .navbar .nav { 
-  margin-left: $logoWidth + 10px; 
-} }
-
-@media (max-width: 767px) { .navbar .nav > li {
-  float: left !important;
-  width: 50% !important;
-  text-align: center !important;
-} }
-@media (max-width: 767px) { .navbar .nav > li.divider {
-  display: none;
-} }
-/*End FIXME*/
-
+// Central messaging content
 .messaging {
-  margin-bottom: 30px; 
   clear: both;
 
-  color: #bbb; 
+  color: #bbb;
   text-align: center;
 
-  .primary { 
-    font-size: 40px; 
+  margin-bottom: 30px;
+
+  .primary {
+    font-size: 40px;
     line-height: 40px;
-    text-transform: uppercase; 
+    text-transform: uppercase;
   }
-  strong { color: white; }
-  .secondary { font-size: 16px; line-height: 18px; }
+
+  strong {
+    color: white;
+  }
+  .secondary {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
 @media (max-width: 767px) {
-  #content > .container > div > .row { background-color: $textLightBackground; }
   .messaging {
     text-align: left;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 
-    .primary { font-size: 20px; line-height: 20px;}
-    .secondary { font-size: 13px; line-height: 18px; }
+    .primary {
+      font-size: 20px;
+      line-height: 20px;
+    }
+    .secondary {
+      font-size: 13px;
+      line-height: 18px;
+    }
   }
-}
-
-/* squash the secondary message into the space the primary uses */
-.messaging-home .secondary { padding: 0 45px; }
-
-/* Content section */
-
-#buzz { min-height: 500px; }
-.column-buzz { padding: $gridGutterWidth; position: relative;}
-
-#learn .link-tile {
-  color: #343434;
-  padding: 15px $gridGutterWidth;
-  @include tile(#343434, #343434, $ribbonFoldColor, #ccc);
-
-  > :last-child { margin-bottom: 0; }
 }
 
 .take-action {
@@ -299,6 +228,7 @@ body.signup { background-color: $topNavigationColor; }
   }
 }
 #learn .take-action { margin-top: -37px; margin-bottom: 20px; }
+
 .column-buzz {
   > h2 { 
     text-align: center; 
@@ -380,10 +310,7 @@ body.signup { background-color: $topNavigationColor; }
     }
   }
 }
-
-.align-right {
-  text-align: right;
-}
+#buzz { min-height: 500px; }
 
 .link-with-action {
   font-weight: bold;
@@ -394,33 +321,6 @@ body.signup { background-color: $topNavigationColor; }
   &:hover, &:active { color: $ribbonFoldColor; text-decoration: none; }
 }
 
-/* FIXME: better scoped or defined? */
-.column-content h1 { margin-top: 25px; margin-bottom: 25px; }
-/* The body content of a site page */
-.row-content {
-  margin-bottom: 20px;
-}
-
-#nav { padding-bottom: 50px; }
-#nav.lift-counter { padding-bottom: 90px; }
-@media (max-width: 767px) {
-  #nav { padding-bottom: 30px; }
-}
-
-/* Left nav section */
-.column-nav {
-  .nav-location { 
-    font-size: 19px; 
-    line-height: 46px; 
-    text-transform: uppercase; 
-    margin-top: 15px; 
-  }
-  .menu {
-    margin-left: -$gridGutterWidth/2;
-    margin-right: $gridGutterWidth/2;
-  }
-}
-
 /* Stacked navigations indent by 1 gutter each time */
 .nav-stacked .nav-stacked { margin-left: $gridGutterWidth/2; margin-bottom: 0; }
 @if $gridGutterWidthTablet != $gridGutterWidth { @media (min-width: 768px) and (max-width: 979px) {
@@ -429,12 +329,13 @@ body.signup { background-color: $topNavigationColor; }
 @if $gridGutterWidthLarge != $gridGutterWidth { @media (min-width: 1200px) {
   .nav-stacked .nav-stacked { margin-left: $gridGutterWidthLarge/2; }
 } }
+
 @media (max-width: 767px) {
   .column-nav > ul > li { float: left; width: 32%; }
   .nav-location { display: none; }
 }
 
-/* Body */
+// Standard header with ribbon
 h1.ribbon {
   > .ribbon-content { 
     background-color: $ribbonColor;
@@ -454,123 +355,60 @@ h1.ribbon {
 } }
 
 
-/* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
-.views-field-rss { float: right; }
-.views-field-title { font-size: 16px; line-height: 20px; }
-.views-field-picture { float: left; margin-right: 6px; }
-.view-forum-list .views-field-picture { float: right; margin-left: 6px; }
-.block-stats div { display: inline; }
-.views-table .views-field-pageviews { white-space: nowrap; }
-.views-field-group-name { display: inline; }
-
-.column-nav .view-threads-by-popularity .views-table {
-  h4 { display: inline; color: #666; font-size: 13px; line-height: 18px; }
-  a { text-decoration: underline; }
-  span.views-field-title { display: block; }
-  > div { margin-bottom: 15px; }
-  .block-stats { clear: both; }
+// Main content containers, rows, columns
+.row-content > .row { background-color: $underNavigationColumnColor; }
+@media (max-width: 767px) {
+  .row-content > .row { background-color: $textLightBackground; }
 }
 
-.og-mission { margin-bottom: 10px; }
+.column-buzz { background-color: $darkBackground; color: $textDarkBackground; }
+.column-buzz a { color: $textDarkBackground; }
 
-.block { @include clearfix(); margin-bottom: 20px; }
+// Column navigation
 .column-nav {
-  .block .item-list { margin-left: $gridGutterWidth; }
-  .view-user-profile-box { margin-bottom: 20px; }
-}
+  background-color: $navigationColumnColor;
+  color: #666;
 
-.community textarea {
-  width: auto;
-}
+  label {
+    color: #666;
+  }
+  a {
+    color: #999;
+  }
 
-.community form {
-  fieldset legend { font-size: 14px; line-height: 18px; }
-  .fieldset-wrapper { margin-left: 10px; }
-}
-.clear-block { @include clearfix(); }
-
-.view-nodes-by-category article.blog {
-  margin-bottom: 25px;
-
-  > h2 { line-height: 25px; }
-
-  > .breadcrumb {
-    margin-bottom: 5px;
+  .headline,
+  h3,
+  h3 > a { 
+    color: white; 
+    text-transform: uppercase; 
+  }
+  .nav-location {
+    font-size: 19px;
+    line-height: 46px;
     text-transform: uppercase;
-    font-weight: bold;
-
-    > .creator { color: black; }
-    > .created { color: #888; }
-
+    margin-top: 15px;
   }
-
-  .nid a { font-size: 16px; }
-
-  > .nid_1 {
-    text-transform: uppercase;
-    text-align: right;
-    padding-bottom: 3px;
-    border-bottom: 1px solid #aaa;
-    font-size: 11px;
-    > a {
-      color: #888;
-    }
+  .menu {
+    margin-left: -$gridGutterWidth/2;
+    margin-right: $gridGutterWidth/2;
   }
 }
 
-.comment { margin-bottom: 20px; padding-top: 8px; border-top: 1px solid #ddd; }
-.comment > table td { vertical-align: top; }
-.comment .comment-author {
-  .views-row {
-    padding: 10px; 
-    width: 170px;
-    margin-right: 10px;
-    margin-top: 5px;
-    background-color: rgb(239, 239, 239);
-    &:hover .views-field-value { height: 100%; }
-    &:hover .views-field-phpcode:after { content: none; }
-  }
-  .views-field-phpcode {
-    clear: both;
-    &:after { content: '...'; }
-  }
-  .views-field-value {
-    height: 0px;
-    overflow: hidden;
+.column-content {
+  background-color: $contentColumnColor;
+
+  h1 {
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
 }
 
-/* copied from system.css */
-html.js fieldset.collapsed {
-    border-bottom-width: 0;
-    border-left-width: 0;
-    border-right-width: 0;
-    height: 1em;
-    margin-bottom: 0;
+.column-buzz { padding: $gridGutterWidth; position: relative;}
+
+/* The body content of a site page */
+.row-content {
+  margin-bottom: 20px;
 }
-html.js fieldset.collapsed * {
-    display: none;
-}
-html.js fieldset.collapsed legend {
-    display: block;
-}
-html.js fieldset.collapsible legend a {
-    background: url("../../misc/menu-expanded.png") no-repeat scroll 5px 75% transparent;
-    padding-left: 15px;
-}
-html.js fieldset.collapsed legend a {
-    background-image: url("../../misc/menu-collapsed.png");
-    background-position: 5px 50%;
-}
-* html.js fieldset.collapsed legend, * html.js fieldset.collapsed legend *, * html.js fieldset.collapsed table * {
-    display: inline;
-}
-html.js fieldset.collapsible {
-    position: relative;
-}
-html.js fieldset.collapsible legend a {
-    display: block;
-}
-html.js fieldset.collapsible .fieldset-wrapper {
-    overflow: auto;
-}
+
+@import "community";
+
